--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li><a [routerLink]="['/home']">Home</a></li>
     <li><a [routerLink]="['/sign-up']">Sign Up</a></li>
-    <li><a [routerLink]="['/contact']">Contact</a></li>
+    <li><a [routerLink]="['/register-contact']">Register Contact</a></li>
     <li><a [routerLink]="['/sign-in']">Sign In</a></li>
   </ul>
 </nav>
