:sparkles: feat: Implement navbar

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,15 +1,30 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand d-flex align-items-center" [routerLink]="['/']">
+      <i class="bi bi-journals" style="font-size: 2rem; position: relative;">
+        <i class="bi bi-bookmark-star-fill" style="font-size: 1rem; position: absolute; top: 50%; left: 50%; transform: translate(-60%, -45%);"></i>
+      </i>Books
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" aria-current="page" [routerLink]="['/']">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        <a class="nav-link" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+          <i class="bi bi-house-door"></i> Home
+        </a>
+        <a class="nav-link" [routerLink]="['/register-contact']" routerLinkActive="active" *ngIf="isAuthenticated()">
+          <i class="bi bi-person-plus"></i> Registrar Contato
+        </a>
+        <a class="nav-link" [routerLink]="['/sign-in']" routerLinkActive="active" *ngIf="!isAuthenticated()">
+          <i class="bi bi-box-arrow-in-right"></i> Login
+        </a>
+        <a class="nav-link" aria-disabled="true" [routerLink]="['/sign-up']" *ngIf="!isAuthenticated()">
+          <i class="bi bi-person-plus-fill"></i> Cadastrar
+        </a>
+        <button class="btn btn-link nav-link" (click)="signOut()" *ngIf="isAuthenticated()">
+          <i class="bi bi-box-arrow-left"></i> Logout
+        </button>
       </div>
     </div>
   </div>
