--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -26,6 +26,6 @@
     </li>
   </ul>
   <div class="card-header d-flex justify-content-between">
-    <i class="bi bi-trash3-fill user-select-auto" (click)="delete()"></i><i class="bi bi-pencil-square user-select-auto"></i>
+    <i class="bi bi-trash3-fill user-select-auto" (click)="delete()"></i><i class="bi bi-pencil-square user-select-auto" (click)="updateContact()"></i>
   </div>
 </div>
